[gd_scene load_steps=4 format=3 uid="uid://cxevor61mdhtc"]

[ext_resource type="Script" uid="uid://bf3fx311wqqo1" path="res://scripts/ui/grid_slot_ui.gd" id="1_cjqhj"]
[ext_resource type="Texture2D" uid="uid://bp4k6gmkgd0n8" path="res://assets/icons/stone_axe.png" id="3_7opn1"]
[ext_resource type="AudioStream" uid="uid://djoihrfwojghx" path="res://assets/kenney_rpgaudio/Audio/bookOpen.ogg" id="4_nrpsh"]

[node name="GridSlotUI" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cjqhj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_7opn1")
expand_mode = 1
stretch_mode = 5

[node name="StackSizeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2
vertical_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nrpsh")
